# vivo-project

./: .env  .gitignore  Project_Gantt.html  Python - 快捷方式.lnk  README.md  WestData (13).yaml  fix_imports.py  main.py  project_tree.txt  pyproject.toml  requirements.txt  requirements_locked.txt  run_app.py  run_hidden.vbs  scaffold_generator.py  start_streamlit.bat
.streamlit/: config.toml
app/: Home.py
app/charts/: mwd_chart.py  sheet_details_chart.py  sheet_lot_chart.py  spc_chart.py
app/components/: compliance_config.py  compliance_control.py  components.py  spc_sections.py  table_sections.py  view_sections.py
app/pages/: SPC报警报表.py  专项资料-台账周报.py  专项资料-解析报告.py  入库不良率ByLot明细表.py  入库不良率BySheet明细表.py  入库不良率分析看板.py  自动预警看板.py
app/utils/: app_setup.py  logger_setup.py  reloader.py  session_manager.py
config/: C472.yaml  M678.yaml  compliance_config.yaml  compliance_state.json  config.yaml  global.yaml  scrap_factory_mapping.yaml
config/products/: C472.yaml  M626.yaml  M678.yaml
data/cache/: panel_details_M678.parquet
data/processed/: debug_1_raw_rates.xlsx  debug_2_simulated_rates.xlsx  debug_3_capped_rates.xlsx  debug_LOT_results.xlsx  debug_MWD_CODE_results.xlsx  debug_SHEET_results.xlsx
docs/: DB22_Search_RUKU_Defect_Total.cpt  H048_Search_Warehousing_Defect_By_BATCH.cpt  post-receive  vivo-不良率报表.xmind  vivo-功能模块.xmind  vivo-系统构建.xmind
resources/: override_rates.xlsx  scrap_sheets.xlsx  spc_outlier_filters.xlsx  spc_probe_targets.xlsx  报废sheet.xlsx  报废sheet_copy.xlsx
resources/M626/: M626_codebaseline.xlsx  M626_override_rates.xlsx  M626_入库不良率规格.xlsx  M626_趋势图人工修正.xlsx
resources/M678/: M678_codebaseline.xlsx  M678_override_rates.xlsx  M678_入库不良率规格.xlsx  M678_趋势图人工修正.xlsx
resources/TEST_PROD/: code_baseline.xlsx
resources/project_files/: 【品质】☆☆☆☆☆北极星风险预防共创台账1205.xlsx
resources/static/: config.js  index.html  script.js  style.css
src/shared_kernel/: config.py  config_model.py
src/vivo_project/: config.py  config_model.py
tests/: app.py  conftest.py  diagnose_streamlit_env.py  factories.py  ppt_utils.py  test_abnormal_detector.py  test_aggrid.py  test_compliance_control_fix.py  test_core_logic.py  test_top10_station.py
tests/core/: test_abnormal_detector.py  test_shadow_ema.py
tests/integration/: test_config.py  test_mapping_flow.py  (+3 more)
(+75 files in other folders)
