[project]
name = "vivo-project"
version = "0.1.0"
description = "天柱专项报表系统 - 基于标准 src 布局"
readme = "README.md"
requires-python = ">=3.11"
# 核心运行依赖：这些是代码中直接 import 的顶级包
dependencies = [
    "pandas>=2.3.1",
    "numpy>=2.3.2",
    "streamlit>=1.49.0",
    "plotly",                # 绘图核心，requirements 中缺失但代码有引用
    "sqlalchemy>=2.0.42",
    "psycopg2>=2.9.10",
    "python-dotenv>=1.1.1",
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0.2",
    "openpyxl",              # Excel 读取引擎
    "comtypes",              # 用于 Excel COM 方案
    "pyarrow>=21.0.0",       # Parquet 快照支持
    "altair>=5.5.0",         # Streamlit 辅助绘图
    "pymupdf>=1.26.7",
    "pydantic-settings>=2.12.0",
    "xlsxwriter>=3.2.9",
    "matplotlib>=3.10.8",
    "streamlit-echarts",
    "pytest>=9.0.2",
]

[tool.uv]
# 开发依赖：仅在本地开发和测试时需要
dev-dependencies = [
    "pytest",
    "ipykernel",
    "jupyterlab",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.pyright]
# 告诉 Pyright 静态类型检查器虚拟环境位置（去哪里寻找第三方依赖包）
venvPath = "."
venv = ".venv"
# 强制屏蔽所有繁琐的类型匹配和属性找不到的噪音
typeCheckingMode = "basic"
reportArgumentType = "none"
reportAttributeAccessIssue = "none"
reportGeneralTypeIssues = "none"
reportCallIssue = "none"
reportOptionalMemberAccess = "none"
reportReturnType = "none"
